# fetchdoc

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/profiles/: gmo_aozora.toml  sbi-sumishin.toml  smbc.toml
src/: cli.rs  io.rs  main.rs  render_body.rs
src/anthropic/: mod.rs
src/auth/: google.rs  loopback.rs  mod.rs  paths.rs  pkce.rs  storage.rs
src/classify/: anthropic.rs  mod.rs
src/export/: accounts.rs  gnucash.rs  local.rs  mod.rs
src/import/: csv.rs  dedup.rs  infer.rs  mod.rs  multi.rs  normalize.rs  profile.rs  xlsx.rs
src/invoicing_jp/: mod.rs  tnumber.rs
src/sources/: dir.rs  eml.rs  gmail.rs  mail.rs  maildir.rs  mbox.rs  mod.rs
tests/: auth_init.rs  export_gnucash_document.rs  export_local.rs  fetch_dir.rs  fetch_eml.rs  fetch_maildir.rs  fetch_mbox.rs  import_csv.rs  import_csv_sbi.rs  import_dedup.rs  render_body.rs
