[package]
name = "fetchdoc"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Fetch invoices from Gmail, classify with AI, export to GnuCash and more — Unix-style CLI"
authors = ["ASARI Kazunori <asari@arthurs.co.jp>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/asarikz/fetchdoc"
homepage = "https://fetchdoc.app"
keywords = ["invoice", "accounting", "gnucash", "gmail", "japan"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = "3"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
csv = "1"
regex = "1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
